--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scroll": "1.8.1",
+    "reactstrap": "8.5.1",
     "session-file-store": "1.3.1"
   },
   "devDependencies": {
