--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "react-dom": "16.12.0",
     "react-scroll": "1.8.1",
     "reactstrap": "8.5.1",
-    "session-file-store": "1.3.1"
+    "session-file-store": "1.3.1",
+    "socket.io": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.0",
